# credit-loan

./: .gitignore  README.md  manage.py  pyproject.toml
backend/authorize/: admin.py  apps.py  auth.py  const.py  controllers.py  exceptions.py  managers.py  middleware.py  models.py  permissions.py  serializers.py  services.py  urls.py  utils.py
backend/authorize/migrations/: 0001_initial.py  0002_user_insolvency_probability.py  0003_alter_user_insolvency_probability.py
backend/base/: const.py  controllers.py  services.py
backend/credit/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/credit/migrations/: 0001_initial.py  0002_creditrequest_transaction_delete_budget_and_more.py  0003_creditrequest_repayment_period_duration_and_more.py  0004_alter_creditrequest_repayment_period_start_date.py  0005_alter_creditplan_interest_rate_and_more.py
backend/credit/portfolio/: ReadMe.md  credit_requests.py  data_types.py  non_consumer_tests.py  requirements.txt  solver.py
credit_loan/: admin.py  apps.py  asgi.py  settings.py  urls.py  utils.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  theme.ts
frontend/src/components/: Calculator.tsx  Footer.tsx  Header.tsx  nonConsumerUtils.ts
frontend/src/pages/: Calculator.tsx  Home.tsx  Login.tsx  Requests.tsx  Signup.tsx
frontend/src/utils/: constants.ts
math/: credit_requests.py  data_types.py  loan_portfolio.py  non_consumer_tests.py  utils.py
templates/email/: confirmation.html
(+1 files in other folders)
